[tool.poetry]
name = "boris"
version = "0.1.0"
description = ""
authors = ["hankehly <henry.ehly@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.4"
botocore = "^1.15.5"
cloudpickle = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
radon = "^4.1.0"
hypothesis = "^5.5.1"
flake8 = "^3.7.9"
isort = "^4.3.21"
black = "^19.10b0"
tox = "^3.20.1"
flake8-polyfill = "^1.0.2"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.black]
line_length = 88

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37,py38
isolated_build = True
parallel_show_output = True

[testenv]
allowlist_externals =
    poetry
    which
    echo
    make
commands_pre =
    which sam
    poetry install -v --no-root
commands =
    poetry run pytest {posargs}
setenv   =
    SAM_CLI_TELEMETRY = 0
    TEMPLATE_SUFFIX = {envname}
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
